# patterns

./: .coverage  .gitignore  README.md  глоссарий.json
dev/PDF_PARSER_2.0/: .env.example  .gitignore  ARCHITECTURE_REVIEW_D0_D4.md  Dockerfile  ENTERPRISE_ML_ROADMAP_IMPLEMENTATION.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  README.md  REFACTORING_NOTES.md  SOLUTION_PDF_OVERLAY_PROBLEM.md  SOLUTION_VISUAL_EXPLANATION.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md  csr_page1_pipeline_test_report.md  demo_segmentation.py  layout_preservation_implementation_report.md  pyproject.toml  requirements.txt  table_column_alignment_report.md  test_font_after_redaction.py  test_line_height.py  test_missing_content.py  test_multiline_partial.py  test_narrow_down.py  test_orchestrator_enhanced.py  test_pymupdf_extraction.py  test_redaction_solution.py  test_segmentation.py  test_segmentation_standalone.py  test_segmenter_unit.py  test_v003_word_breaks.py  translation_engine_analysis.md
dev/PDF_PARSER_2.0/config/: pdf_export_presets.yaml
dev/PDF_PARSER_2.0/configs/: README_reference_docx.md  pdf.css
dev/PDF_PARSER_2.0/data/: daemon_state.txt  translation_memory.db
dev/PDF_PARSER_2.0/docs/: CONTEXT_AWARE_CHUNKING.md  DAEMON_USAGE.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  P2_TERM_VALIDATOR.md  P3_PANDOC_EXPORT.md  P4_TBX_TMX_INTEROP.md  P5_HYBRID_SEARCH.md  P6_BILLING_QUOTAS.md  SECTION_SPLITTING.md  SELF_LEARNING_TRANSLATION.md  SEMANTIC_MEMORY_ARCHITECTURE.md  SIMPLIFIED_TRANSLATION.md  UNIFIED_PIPELINE.md  pdf_pipeline.md
dev/PDF_PARSER_2.0/examples/: anchoring_example.py  context_aware_chunking_example.py  demo_marker_injection.py  docling_extraction_demo.py  knowledge_base_example.py  multi_stage_translation_demo.py  pymupdf_extraction_demo.py  section_splitting_example.py  self_learning_translation_example.py  semantic_memory_example.py  simple_marker_demo.py  simple_translation_example.py  style_manager_demo.py  translation_orchestrator_enhanced.py  unified_pipeline_example.py
dev/PDF_PARSER_2.0/kps/: cli.py  layout_preserver.py  metrics.py
dev/PDF_PARSER_2.0/legacy_tests/: test_agreement_diagnostic.py  test_all_table_columns.py  test_column_overlaps.py  test_exact_failing_params.py  test_exact_flow.py  test_final_table_check.py  test_final_validation.py  test_font_insertion.py  test_font_methods.py  test_font_simple.py  test_formatting_preservation.py  test_layout_simple.py  test_min_height_ratio.py  test_multiline_blocks.py  test_multiline_insert.py  test_multiline_works.py  test_overflow_validation.py  test_show_pdf_page.py  test_show_pdf_page_font.py  test_small_fontsize.py  test_span_extraction.py  test_span_split_manual.py  test_table_alignment.py  test_table_structure.py  test_textwriter_api.py  tmp.docx
dev/PDF_PARSER_2.0/migrations/: 001_initial_schema.sql  004_translations_training.sql  005_billing_usage.sql  20251114_add_pgvector.sql
dev/PDF_PARSER_2.0/output/: final.docx
dev/PDF_PARSER_2.0/production_artifacts/: CSR Report Jan 1 2025 to Jul 30 2025 (1)_ru.html  production_summary.json  (+3 more)
(+341 files in other folders)
